# vs_solutions

./: Cargo.toml
find_slns/: Cargo.toml
sln_operations/: Cargo.toml
sln_operations/src/: lib.rs
ui/: Cargo.toml
ui/src/: main.rs
ui_adapter/: Cargo.toml
ui_adapter/src/: lib.rs
