[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
env_logger = "0.9.0"
log = "0.4.14"
ui_adapter = { version = "0.1.0", path = "../ui_adapter" }
